[package]
name = "pt"
version = "1.1.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.23", features = ["cargo", "wrap_help", "derive"] }
